# Progressive-Meshes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: testpatch.off
data/shaders/: standard.frag  standard.vert
examples/: CMakeLists.txt  Decimation.cpp  Decimation.hpp  Geometry.hpp  ProgMesh.cpp  ProgMesh.hpp  ProgModel.cpp  ProgModel.hpp  main.cpp
include/: Cube.hpp  DefaultShaders.hpp  Geode.hpp  GroupNode.hpp  MatrixTransformNode.hpp  Mesh.hpp  Model.hpp  Node.hpp  OpenGLDepthRasterStates.hpp  OpenGLPipeline.hpp  OpenGLRenderDevice.hpp  Platform.hpp  RenderDevice.hpp  SceneGraph.hpp  Utilities.hpp
source/: CMakeLists.txt  Cube.cpp  DefaultShaders.cpp  GLFW_Platform.cpp  Geode.cpp  GroupNode.cpp  MatrixTransformNode.cpp  Mesh.cpp  Model.cpp  Node.cpp  OpenGLRenderDevice.cpp  RenderDevice.cpp  SceneGraph.cpp
